unpackaged/main/default/objects/Activity/fields/Activity_Address__c.field-meta.xml
<CustomField>
    <fullName>Activity_Address__c</fullName>
    <description>Address of the activity</description>
    <label>Activity Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>