unpackaged/main/default/objects/Activity/fields/Activity_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_Completion_Time__c</fullName>
    <description>Time that activity was completed.</description>
    <label>Activity Completion Time</label>
    <type>Time</type>
</CustomField>