unpackaged/main/default/objects/Activity/fields/BullBag_Count__c.field-meta.xml
<CustomField>
    <fullName>BullBag_Count__c</fullName>
    <description>The quantity of new BullBags involved in a bag drop.</description>
    <label>BullBag Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>