unpackaged/main/default/objects/Activity/fields/BullBag_Count_Rolled__c.field-meta.xml
<CustomField>
    <fullName>BullBag_Count_Rolled__c</fullName>
    <description>The quantity of rolled BullBags involved in a bag drop.</description>
    <label>BullBag Count (Rolled)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>