unpackaged/main/default/objects/Activity/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Inbound Email</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
                <label>Onsite Cold Call</label>
            </value>
            <value>
                <fullName>Customer Visit</fullName>
            </value>
            <value>
                <fullName>Bag Demo</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Store Visit</fullName>
            </value>
            <value>
                <fullName>Bag Drop Off</fullName>
            </value>
            <value>
                <fullName>Demo Day</fullName>
                <label>Pro Day</label>
            </value>
            <value>
                <fullName>Conference CAll</fullName>
                <label>Conference Call</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>**** Customer Service Use Only ****</fullName>
            </value>
            <value>
                <fullName>Phone Order</fullName>
            </value>
            <value>
                <fullName>New Order</fullName>
            </value>
            <value>
                <fullName>Service Eta</fullName>
            </value>
            <value>
                <fullName>Service Complaint</fullName>
            </value>
            <value>
                <fullName>Refund Update</fullName>
            </value>
            <value>
                <fullName>Price Inquiry</fullName>
            </value>
            <value>
                <fullName>Service Update</fullName>
            </value>
            <value>
                <fullName>Retail Locater</fullName>
            </value>
            <value>
                <fullName>Retailer Follow up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>