unpackaged/main/default/objects/Activity/fields/Customer_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inquiry__c</fullName>
    <label>Customer Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Call_Type</valueSetName>
    </valueSet>
</CustomField>