unpackaged/main/default/objects/Activity/fields/Customer_Service_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Call_Type__c</fullName>
    <label>Customer Service Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Service_Call_Type</valueSetName>
    </valueSet>
</CustomField>