unpackaged/main/default/objects/Activity/fields/Ending_Mileage_del__c.field-meta.xml
<CustomField>
    <fullName>Ending_Mileage_del__c</fullName>
    <label>Ending Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>