unpackaged/main/default/objects/Activity/fields/Referral_Request__c.field-meta.xml
<CustomField>
    <fullName>Referral_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you receive a referral?</description>
    <label>Referral</label>
    <type>Checkbox</type>
</CustomField>