unpackaged/main/default/objects/Activity/fields/Sales_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Type__c</fullName>
    <label>Sales Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Call_Type</valueSetName>
    </valueSet>
</CustomField>