unpackaged/main/default/objects/Activity/fields/Set_up_Bag__c.field-meta.xml
<CustomField>
    <fullName>Set_up_Bag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you set-up a BullBag for a presentation during this interaction?</description>
    <label>Set-up Bag</label>
    <type>Checkbox</type>
</CustomField>