unpackaged/main/default/objects/Activity/fields/Starting_Mileage_del__c.field-meta.xml
<CustomField>
    <fullName>Starting_Mileage_del__c</fullName>
    <label>Starting Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>