unpackaged/main/default/objects/Activity/fields/Sub__c.field-meta.xml
<CustomField>
    <fullName>Sub__c</fullName>
    <formula>text(CallType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub</label>
    <type>Text</type>
</CustomField>