unpackaged/main/default/objects/Activity/fields/Total_Miles__c.field-meta.xml
<CustomField>
    <fullName>Total_Miles__c</fullName>
    <formula>Ending_Mileage_del__c - Starting_Mileage_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Miles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>